<resources>
    <string name="app_name">My Application</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="percentage">%</string>
    <string name="clear">AC</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Multiplication">×</string>
    <string name="Division">÷</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Minus">-</string>
    <string name="Zero">0</string>
    <string name="Point">.</string>
    <string name="Equals">=</string>
    <string name="Plus">+</string>

    <string name="Display">Enter in value</string>
</resources>